Add: ユーザーID入力用のinputタグを追加

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <h2>GitHub User Info</h2>
-  <button onclick="fetchUserInfo('js-primer-example')">Get user info</button>
-  <div id="result">
-    
+  <input id="js-userId" type="text" placeholder="user id..." />
+  <button onclick="main();">Get user info</button>
+  <div id="js-result">
+
   </div>
   <script src="index.js"></script>
 </body>
